20090504 ui/uijoystick.c: poll_joystick() should fire an input_event for each
         button (fixes bug #2784357) (Anonymous).
20090504 input.c,ui/svga/{svgaui.c,svgajoystick.c}: switch SVGA joystick code
         from the polling interface to the event interface (patch #2785333)
         (Anonymous).
20090509 settings.dat,settings.pl,ui/gtk/options.pl,ui/widget/options.pl:
         defend against segfaults when trying to deal with empty options XML
         elements (thanks, Anonymous from patch #2788548) (Fred).
20090518 ui/gtk/options.pl: add <string.h> for strcmp (Fred).
20090518 man/fuse.1,ui/gtk/{gtkinternals.h,gtkdisplay.c,gtkui.c}: allow scalers
         to set window size in GTK+ UI (patch #2790063 rkd77 and Fred, also
         resolves feature requests #1841504 and #1729198).
20090529 Makefile.am,README,compat.h,configure.in,hacking/ChangeLog,man/fuse.1,
         settings.dat,sound.[c|cpp|h],sound/{Blip_Buffer.[cpp|h],Makefile.am},
         tape.c,ui/options.dat,ula.c: switch from libsamplerate to Blip_Buffer
         (by Shay Green) for alias noise reduction for beeper and AY (Fred).
20090530 ui/gtk/gtkui.c: remove unused variable (Fred).
20090530 timer/timer.c: fixes for speed estimation (part of patch in bug
         #2688741) (Gergely Szasz).
20090530 configure.in: try harder to find libpng (Fred).
20090530 ui/gtk/gtkdisplay.c: don't allow double or triple size filters for the
         Timex machines (Fred).
20090530 display.c: fix border colour recorded in display_last_screen so it
         can handle bright borders like in Timex HiRes mode (fixes bug
         #2788244) (Fred).
20090531 ui/widget/options.pl: fix options widget drawing bug in segfault
         protection (Fred).
20090531 configure.in: seem to be trying too hard to find libpng (Fred).
20090605 disk/{beta.[ch]},machines/{spec48.c,tc2048.c},man/fuse.1,
         z80/{coretest.c,z80.c,z80_ops.c}: enable Beta 128 interface in 48K and
         TC2048 machines (thanks, Omikron) (Fred).