@@ -1,5 +1,5 @@
 # settings.dat: configuration options for Fuse
-# Copyright (c) 2002-2008 Philip Kendall
+# Copyright (c) 2002-2009 Philip Kendall
 
 # $Id$
 
@@ -68,6 +68,7 @@ plusd, boolean, 0
 beta128, boolean, 0
 late_timings, boolean, 0
 unittests, boolean, 0
+fuller, boolean, 0
 
 sound_device, string, NULL, 'd'
 sound, boolean, 1
